--- a/docker/.env
+++ b/docker/.env
@@ -40,7 +40,7 @@ INFINITY_HOST=infinity
 # Port to expose Infinity API to the host
 INFINITY_THRIFT_PORT=23817
 INFINITY_HTTP_PORT=23820
-INFINITY_PSQL_PORT=5432
+INFINITY_PSQL_PORT=5433
 
 # The password for MySQL. 
 MYSQL_PASSWORD=infini_rag_flow
@@ -112,7 +112,7 @@ RAGFLOW_IMAGE=infiniflow/ragflow:v0.17.0-slim
 # RAGFLOW_IMAGE=registry.cn-hangzhou.aliyuncs.com/infiniflow/ragflow:nightly-slim
 #
 # - For the `nightly` edition, uncomment either of the following:
-# RAGFLOW_IMAGE=swr.cn-north-4.myhuaweicloud.com/infiniflow/ragflow:nightly
+RAGFLOW_IMAGE=swr.cn-north-4.myhuaweicloud.com/infiniflow/ragflow:nightly
 # RAGFLOW_IMAGE=registry.cn-hangzhou.aliyuncs.com/infiniflow/ragflow:nightly
 
 # The local time zone.
